Updated chevron icons with original Google material ones; cleaning up type in nav and links. Mobile nav recent items. Cleaned up text-__ utility classes

--- a/source/assets/scss/modules/links.scss
+++ b/source/assets/scss/modules/links.scss
@@ -1,9 +1,11 @@
 // Global link styles
 a {
     text-decoration: none;
-    font-weight: $font-weight-regular;
+    font-weight: $font-weight-mid;
+	transition-property: background-color, color;
+	transition-duration: $timing-default;
     &:hover, &:active, &:focus {text-decoration: none; }
-    @include easing($timing-default);
+    // @include easing($timing-default);
 }
 // for the link--[color] styles, these have moved to overrides.scss, because order-of-ops.
 section a {
