--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -127,10 +127,19 @@
             opacity: 1; // default subheaders have half
         }
     }
-    &-small, &-tiny, &-micro {
-        font-size: rem-calc(13px);
-        //font-weight: $font-weight-mid;
-        // opacity: 0.7;
+    &-uppercase {
+        text-transform: uppercase;
+    }
+    &-underline{
+        display: inline-block;
+        padding: 0 0 rem-calc(2px) 0;
+        border-bottom: rem-calc(2px) solid $color_deep;
+    }
+    &-smaller, &-small, &-tiny, &-micro {
+        font-size: smaller; // goes one step smaller than parent element
+    }
+    &-smallest {
+        font-size: 75%;
     }
     &-tiny {
         font: {
@@ -141,7 +150,7 @@
     &-larger {
         font-size: 120%;
     }
-    &-reg {
+    &-regular, &-normal, &-reg {
         font-weight: $font-weight-regular !important;
     }
     &-light {
@@ -231,7 +240,7 @@
     border-radius: 0;
 }
 .relative{
-  position: relative;
+    position: relative;
 }
 
 // === overrides third-party hubspot forms, widgets, etc. ===
