--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -183,7 +183,7 @@ $underline: false !default;
                 flex: $set;
 }
 @mixin fx-hover-nudge {
-    transition: all $timing-default * 0.8 ease-out;
+    transition: transform $timing-default * 0.8 ease, color $timing-default * 0.8 ease;
     &:focus,
     &:hover {
         transform: translate3d(3px, 0, 0);
