Found some spots where the new company nav wasn't upgraded. Removing Swiftype fields & JS. Moved nav mockup to Seldon guide. Think I got them all!

--- a/source/about/mohan.html.erb
+++ b/source/about/mohan.html.erb
@@ -1,35 +1,17 @@
 ---
-title: "Leadership: Travis Good, MD"
-summary: "Travis Good, MD, Co-founder, CEO, and Chief Privacy Officer"
-author: "Travis Good, MD"
+title: "Leadership: Mohan Balachandran"
+summary: "Mohan Balachandran, Co-founder, CEO, and Chief Privacy Officer"
+author: "Mohan Balachandran"
 header: "Leadership"
 tags: "leadership, strategy, people"
 date: "January 1, 2017"
 ogType: "profile"
 header: "Leadership"
-subheader: "Travis Good, MD"
-layout: basic
+subheader: "Mohan Balachandran"
+layout: company
 customCSS: "about-us"
 ---
-<div class="container-color--dark-alt">
-    <%= partial "partials/head/header", :locals => { :style => "light" } %>
-</div>
-<section class="custom-sticky custom-sticky--dark show-for-large">
-    <div class="row">
-        <div class="columns small-12 medium-12">
-            <ul>
-                <li><a href="/about">About Us</a></li>
-                <li><a href="/leadership">Leadership</a></li>
-                <li><a href="/blog">Company Blog</a></li>
-                <li><a href="https://help.datica.com/hc/en-us/sections/115001646346-Engineering-Blog">Engineering Blog</a></li>
-                <li><a href="/careers">Careers</a></li>
-                <li><a href="/press">Press</a></li>
-                <li><a href="/events">Events</a></li>
-                <li><a href="/open-source">Open Source</a></li>
-            </ul>
-        </div>
-    </div>
-</section>
+
 <% data.site.person.each do |id, entry| %>
     <% if entry["slug"] == "mohan" %>
         <section class="section-article container-color--gray-light leadership-profile-section">
