--- a/source/open-source/policies.html.erb
+++ b/source/open-source/policies.html.erb
@@ -6,27 +6,9 @@ tags: "open source, OSS, policies, HIPAA, HL7, FHIR, interoperability, EHR, inte
 date: "January 1, 2017"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/29pEL9FKGwmQ6GMKaeKmKc/f882650ba0219b6f9e35b8da68c95dab/open-source-2-share.jpg?w=1200"
 customCSS: "about-us"
-layout: "basic"
+layout: "company"
 ---
-<div class="container-color--dark-alt">
-    <%= partial "partials/head/header", :locals => { :style => "light" } %>
-</div>
-<section class="custom-sticky custom-sticky--dark show-for-large">
-    <div class="row">
-        <div class="columns small-12 medium-12">
-            <ul>
-                <li><a href="/about">About Us</a></li>
-                <li><a href="/leadership">Leadership</a></li>
-                <li><a href="/blog">Company Blog</a></li>
-                <li><a href="https://help.datica.com/hc/en-us/sections/115001646346-Engineering-Blog">Engineering Blog</a></li>
-                <li><a href="/careers">Careers</a></li>
-                <li><a href="/press">Press</a></li>
-                <li><a href="/events">Events</a></li>
-                <li><a href="/open-source" class="active">Open Source</a></li>
-            </ul>
-        </div>
-    </div>
-</section>
+
 <section class="section-article">
     <div class="row align-center">
         <div class="columns small-12 medium-8">
