--- a/source/press/all.html.erb
+++ b/source/press/all.html.erb
@@ -7,27 +7,8 @@ date: "January 1, 2017"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 header: "Media Resources"
 subheader: "Press Releases"
-layout: basic
+layout: company
 ---
-<div class="container-color--dark-alt">
-    <%= partial "partials/head/header", :locals => { :style => "light" } %>
-</div>
-<section class="custom-sticky custom-sticky--dark show-for-large">
-    <div class="row">
-        <div class="columns small-12 medium-12">
-            <ul>
-                <li><a href="/about">About Us</a></li>
-                <li><a href="/leadership">Leadership</a></li>
-                <li><a href="/blog">Company Blog</a></li>
-                <li><a href="https://help.datica.com/hc/en-us/sections/115001646346-Engineering-Blog">Engineering Blog</a></li>
-                <li><a href="/careers">Careers</a></li>
-                <li><a href="/press" class="active">Press</a></li>
-                <li><a href="/events">Events</a></li>
-                <li><a href="/open-source">Open Source</a></li>
-            </ul>
-        </div>
-    </div>
-</section>
 <section class="section-article container-color--dark press-masthead">
     <div class="row align-center">
         <div class="columns small-12 medium-6">
