--- a/source/innovation/leadership-gallery.html.erb
+++ b/source/innovation/leadership-gallery.html.erb
@@ -8,6 +8,7 @@ share_image: "https://images.ctfassets.net/189dvqdsjh46/6narHoNofSE0WosSoisscK/a
 header: "Datica Thought Leadership Gallery"
 subheader: "subheader"
 layout: sparse
+sharer: true
 customCSS: "leadership-gallery"
 customJS: "/public/js/leadership-gallery.js"
 ---
