--- a/source/layouts/sparse.erb
+++ b/source/layouts/sparse.erb
@@ -28,7 +28,7 @@
         </script>
         <%= javascript_include_tag "jquery" %>
         <%= javascript_include_tag "foundation.min" %>
-        <%= javascript_include_tag "nav", "cookie", "sharer", "all" %>
+        <%= javascript_include_tag "cookie", "sharer", "all" %>
 
         <%# Custom JS files %>
         <% if current_page.data.has_key?("customJS") %>
