--- a/source/partials/scripts/_footer.erb
+++ b/source/partials/scripts/_footer.erb
@@ -8,8 +8,16 @@ document.addEventListener("DOMContentLoaded", function(event) {
 <%= javascript_include_tag "jquery", "foundation.min" %>
 <%#= javascript_include_tag "nav", "smooth-scroll", "cookie", "sharer", "all" %>
 <%#= javascript_include_tag "all" %>
-<script defer src="/public/js/nav.js"></script>
+<%#=<script defer src="/public/js/nav.js"></script> %>
 <script defer src="/public/js/smooth-scroll.js"></script>
 <script async src="/public/js/cookie.js"></script>
-<script async src="/public/js/sharer.js"></script>
+<% if current_page.data.sharer == true %>
+	<script async src="/public/js/sharer.js"></script>
+<% end %>
 <script src="/public/js/all.js"></script>
+<%# Custom JS files %>
+<% if current_page.data.has_key?("customJS") %>
+    <% current_page.data.customJS.split(",").each do |filename| %>
+        <script src="<%= filename.strip %>"></script>
+    <% end %>
+<% end %>
