--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -20,7 +20,7 @@ feed_url: "https://datica.com/blog/feed.xml"
       .row.align-middle
         .columns.small-12.medium-6.large-8
           h1.headline-1 A security and compliance layer for Kubernetes.
-          h2.headline-4 Datica manages healthcare compliance on top of Azure and AWS.
+          h2.headline-4 Datica manages the compliance of your favorite tools, technologies and Platforms.
           p.lead
             | The Datica Platform makes your cloud workloads compliant to the standards of HIPAA, HITRUST, GDPR, and GxP.
           = partial "partials/snippets/button", :locals => { :label => "Explore the Platform", :url => "/platform", :button_classes => "button hollow-inverted", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right" }
