--- a/source/assets/scss/views/platform.scss
+++ b/source/assets/scss/views/platform.scss
@@ -11,26 +11,48 @@
 // @import '../modules/fonts-optional';
 // @include foundation-off-canvas;
 
-.position-bottom-rt { // slap artwork to bottom right on medium-large and up; wrap under for small - med
-    width: 100%;
-    margin-bottom: -2rem; // offset the padding from .section-article at this viewport
+// custom stuff
+.platform-art-1 { // pair with container-x bg image fill classes
+    position: absolute;
+    top: 12rem;
+    height: 100%;
     @include breakpoint (medium) {
-        margin-bottom: -2.5rem; // I'd rather tweak these than mess with .section-article for this ONE thing
+        right: -50%;
+        width: 90%;
     }
-    @include breakpoint (medium-large up) {
-        margin-bottom: 0;
-        position: absolute;
-        bottom: 0;
-        right: 1rem;
-        width: 58%;
-        max-height: 30rem;
+    @include breakpoint (large) {
+        right: -28%;
+        width: 76%;
+    }
+    @include breakpoint (xlarge) {
+        right: -10%;
+        width: 62%;
+    }
+    @include breakpoint (xlarge) {
+        right: -14%;
+        width: 62%;
     }
 }
+// .position-bottom-rt { // slap artwork to bottom right on medium-large and up; wrap under for small - med
+//     width: 100%;
+//     margin-bottom: -2rem; // offset the padding from .section-article at this viewport
+//     @include breakpoint (medium) {
+//         margin-bottom: -2.5rem; // I'd rather tweak these than mess with .section-article for this ONE thing
+//     }
+//     @include breakpoint (medium-large up) {
+//         margin-bottom: 0;
+//         position: absolute;
+//         bottom: 0;
+//         right: 1rem;
+//         width: 58%;
+//         max-height: 30rem;
+//     }
+// }
 
 // Set max height on "building on the paltform" illustrations
-.build-height{
-  max-height: 155px;
-}
+// .build-height{
+//   max-height: 155px;
+// }
 
 // Add a border to the bottom of the "How the Platform Works" images
 img.soft-border{
